# NDR-code

./: LICENSE  README.md  environment.yml  exp_runner.py  geo_render.py  pretrained_eval.py  train_eval.py
confs/: ddeform_human.conf  kfusion_snoopy.conf  kfusion_toy.conf
models/: dataset.py  embedder.py  fields.py  renderer.py
models/LieAlgebra/: se3.py  sinc.py  so3.py
pose_initialization/: README.md  create_camera.py  registrate.py  step1.py  step3.py  visualization.py
pose_initialization/files/: intrinsics.txt
renderer/: CMakeLists.txt  build.sh  render_func.cpp
